test/classes/vass/duplicate-virtual-method-error-1.good
duplicate-virtual-method-error-1.chpl:5: error: ambiguous call 'C.dup()'
duplicate-virtual-method-error-1.chpl:1: note: candidates are: C.dup()
duplicate-virtual-method-error-1.chpl:1: note:                 C.dup()
